# BlackBox

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  EdgeCase.java  PHASE2_OVERVIEW.md  PHASE3_GAPS.md  PROJECT_MAP.md  Phase 1.md  Phase 2.md  Phase 3.md  ProjectInfo.md  ROADMAP.md  error_test.js  error_test.py  improvements.md  mcp_bridge.py  repomix.config.json  start-daemon.ps1  stress_test.py  test_output.py
.agents/rules/: agent_behavior.md  documentation_strategy.md
.github/workflows/: ci.yml  release.yml
blackbox-lab/: DASHBOARD_TEST_GUIDE.md  index.html  package-lock.json  package.json  test-data-inject.ps1  test-data-inject.sh
blackbox-lab/src/: App.tsx  index.css  types.ts
blackbox-lab/src/components/: CorrelationPanel.tsx  GitLens.tsx  Header.tsx  InjectionDrawer.tsx  InjectionStation.tsx  LogExplorer.tsx  NetworkInspector.tsx  OverviewDashboard.tsx  RawLogsView.tsx  SourceMatrix.tsx  StatusBar.tsx  Timeline.tsx  ToastContainer.tsx  TriageView.tsx  UnifiedStream.tsx
blackbox-lab/src/hooks/: useDaemon.ts  useToast.ts
blackbox-lab/src/test-fixtures/: database.rs  processor.py  server.js
crates/blackbox-core/: Cargo.toml
crates/blackbox-core/src/: lib.rs  protocol.rs  types.rs
crates/blackbox-daemon/: Cargo.toml  build.rs
crates/blackbox-daemon/benches/: drain_bench.rs
crates/blackbox-daemon/src/: admin_api.rs  assets.rs  buffer.rs  cli.rs  daemon_state.rs  experiment.rs  file_watcher.rs  http_proxy.rs  http_store.rs  lib.rs  main.rs  pii_masker.rs  pty_capture.rs  status_server.rs  structured_store.rs  tcp_bridge.rs  typed_context.rs  update.rs
crates/blackbox-daemon/src/docker/: demux.rs  error_store.rs  log_filter.rs  mod.rs
crates/blackbox-daemon/src/mcp/: mod.rs  proxy.rs  tools.rs
crates/blackbox-daemon/src/scanners/: ansi.rs  drain.rs  env.rs  git.rs  manifests.rs  mod.rs  stacktrace.rs
crates/blackbox-daemon/src/setup/: client.rs  mod.rs  paths.json
crates/blackbox-run/: Cargo.toml
crates/blackbox-run/src/: main.rs
crates/blackbox-sandbox/: Cargo.toml
crates/blackbox-sandbox/src/: main.rs
crates/blackbox-test/: Cargo.toml
crates/blackbox-test/src/: main.rs
crates/blackbox-tui/: Cargo.toml
docs/: 01_ARCHITECTURE.md  02_MCP_TOOLS_REFERENCE.md  03_SCANNERS_LOGIC.md  04_DOCKER_AND_SYSTEM.md  05_LAB_AND_UI.md  06_IDE_INTEGRATION.md  07_TESTING_AND_SECURITY.md  08_PHASE3_ROADMAP.md  09_HTTP_PROXY.md  10_EXTERNAL_LOGS.md  11_STRUCTURED_LOGS.md
docs/plans/: 2026-04-19-documentation-update.md  2026-04-21-start-daemon-and-inject-test-data-design.md  2026-04-21-start-daemon-and-inject-test-data-plan.md
scratch/: edge_cases.py  mcp_tester.py  send_logs.py
scripts/: install.ps1  install.sh
shell-hooks/: blackbox.bash  blackbox.ps1  blackbox.zsh
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
(+1 files in other folders)
