[workspace]
members = [
    "crates/blackbox-core",
    "crates/blackbox-daemon", "crates/blackbox-test",
    "crates/blackbox-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37", features = ["full"] }
