[workspace]
members = [
    "crates/blackbox-core",
    "crates/blackbox-daemon", "crates/blackbox-run", "crates/blackbox-test",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37", features = ["full"] }
bollard = "0.17"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
criterion = "0.5"
