[package]
name = "blackbox-daemon"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
blackbox-core = { path = "../blackbox-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"  # used by pii_masker
gix = { version = "0.70", features = ["max-performance-safe"] }
bollard = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
notify = "6.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
portable-pty = "0.8"
crossbeam-queue = "0.3"
clap = { version = "4", features = ["derive"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "drain_bench"
harness = false
